Change behaviour of GET /articles to return all available articles if no user is provided
