# src/main/resources/openAPI.yaml
@@ -50,10 +50,26 @@ paths:
         - articles
       summary: Get all articles
       description:
-        Get all articles, that current authorized user has, including private and custom.
-        You might specify sortBy, page, size, sortDirection clauses to specify requested articles.
+        Get all articles, that are available to current user, including private and custom ones.
+        If current user is not authorized, returns all public articles.
+        You might specify creatorId, dateFrom, dateTo, sortBy, page, size,
+        sortDirection clauses to specify articles.
       operationId: getAllArticles
       parameters:
+        - in: query
+          name: creatorId
+          schema:
+            type: string
+        - in: query
+          name: dateFromMillis
+          schema:
+            type: integer
+            format: int64
+        - in: query
+          name: dateToMillis
+          schema:
+            type: integer
+            format: int64
         - in: query
           name: sortBy
           schema:
@@ -92,8 +108,6 @@ paths:
                 $ref: '#/components/schemas/ArticlesResponse'
         '400':
           description: Invalid request body
-      security:
-        - bearerAuth: [ ]
   /articles/{articleId}:
     get:
       tags:
@@ -125,8 +139,6 @@ paths:
           description:
             Requested article is not found. It might be the case when current
             user does not have access to this article.
-      security:
-        - bearerAuth: [ ]
     put:
       tags:
         - articles
